; ModuleID = '/home/carl/AnghaBench/disque/src/extr_sparkline.c_freeSparklineSequence.c'
source_filename = "/home/carl/AnghaBench/disque/src/extr_sparkline.c_freeSparklineSequence.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sequence = type { i32, %struct.sequence*, %struct.sequence* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @freeSparklineSequence(%struct.sequence* %0) #0 {
  %2 = alloca %struct.sequence*, align 8
  %3 = alloca i32, align 4
  store %struct.sequence* %0, %struct.sequence** %2, align 8
  store i32 0, i32* %3, align 4
  br label %4

4:                                                ; preds = %20, %1
  %5 = load i32, i32* %3, align 4
  %6 = load %struct.sequence*, %struct.sequence** %2, align 8
  %7 = getelementptr inbounds %struct.sequence, %struct.sequence* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 8
  %9 = icmp slt i32 %5, %8
  br i1 %9, label %10, label %23

10:                                               ; preds = %4
  %11 = load %struct.sequence*, %struct.sequence** %2, align 8
  %12 = getelementptr inbounds %struct.sequence, %struct.sequence* %11, i32 0, i32 1
  %13 = load %struct.sequence*, %struct.sequence** %12, align 8
  %14 = load i32, i32* %3, align 4
  %15 = sext i32 %14 to i64
  %16 = getelementptr inbounds %struct.sequence, %struct.sequence* %13, i64 %15
  %17 = getelementptr inbounds %struct.sequence, %struct.sequence* %16, i32 0, i32 2
  %18 = load %struct.sequence*, %struct.sequence** %17, align 8
  %19 = call i32 @zfree(%struct.sequence* %18)
  br label %20

20:                                               ; preds = %10
  %21 = load i32, i32* %3, align 4
  %22 = add nsw i32 %21, 1
  store i32 %22, i32* %3, align 4
  br label %4

23:                                               ; preds = %4
  %24 = load %struct.sequence*, %struct.sequence** %2, align 8
  %25 = getelementptr inbounds %struct.sequence, %struct.sequence* %24, i32 0, i32 1
  %26 = load %struct.sequence*, %struct.sequence** %25, align 8
  %27 = call i32 @zfree(%struct.sequence* %26)
  %28 = load %struct.sequence*, %struct.sequence** %2, align 8
  %29 = call i32 @zfree(%struct.sequence* %28)
  ret void
}

declare dso_local i32 @zfree(%struct.sequence*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
